--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -832,7 +832,7 @@ class MainActivity : AppCompatActivity() {
 
 <p>You can integrate Appwrite Functions with other Appwrite services by using the appropriate <a href="/docs/getting-started-for-server">Server SDK</a> for your runtime. You can find starter code for your function's runtime in the <a href="https://github.com/appwrite/functions-starter" target="_blank">Appwrite Function Starter repository</a>.</p>
 
-<p>To initialize a Server SDK in a function, you need to provide your Appwrite project's endpoint and an <a href="/docs/keys">API key</a> as variables in the <b>Settings</b> tab of your Function. The ID of your Appwrite project is passed in automatically as <span class="tag">APPWRITE_FUNCTION_PROJECT_ID</span>.</p>
+<p>To initialize a Server SDK in a function, you need to provide your Appwrite endpoint and an <a href="/docs/keys">API key</a> in the <b>Variables</b> tab of your Function. The ID of your Appwrite project is passed in automatically as <span class="tag">APPWRITE_FUNCTION_PROJECT_ID</span>.</p>
 
 <h2><a href="/docs/functions#monitorDebug" id="monitorDebug">Monitor & Debug</a></h2>
 
