--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -118,7 +118,7 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
 
 <div class="notice margin-top-large margin-bottom-large">
     <h3>Permissions</h3>
-    <p>All subscriptions are secured by the <a href="/docs/permissions">permissions system</a> offered by Appwrite, meaning a user will only receive updates to resources to which they has permission to read.</p>
+    <p>All subscriptions are secured by the <a href="/docs/permissions">permissions system</a> offered by Appwrite, meaning a user will only receive updates to resources they have permission to access.</p>
     <p>Using <span class="tag">Role.any()</span> on read permissions will allow any client to receive updates.</p>
 </div>
 
