feat: address review comments

--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -91,7 +91,7 @@ p>Using permissions, you can decide that only <span class="tag">user A</span> an
     </tr>
     <tr>
         <td>Permission.write()</td>
-        <td>Alias to grant all of create, update, and delete access.</td>
+        <td>Alias to grant create, update, and delete access for collections and buckets and update and delete access for documents and files.</td>
     </tr>
     </tbody>
 </table>
